[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vizkarmhutch"
version = "0.1.7"
authors = [
 { name="Karmen Hutchinson", email="karmen.hutchinson@gmail.com" },
]
description = "A visualization tool using Matplotlib"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/karmhutch/matplotlib-viz-tool"

